# MemoryProfiler

./: .gitignore  .gitignore.txt  CMakeLists.txt  CMakePresets.json  README.md  REVISION_GENERAL.md
DataStructure/: CMakeLists.txt  TestDataStructure.cpp
DataStructure/Includes/: MySimpleLinkedList.h
MemoryProfiler/: CMakeLists.txt  MemoryProfiler.cpp
MemoryProfiler/Client/: CMakeLists.txt  README.md  ServerClient.cpp  ServerClient.h  profiler_structures.h  test_client.cpp  test_complete_profiler.cpp  test_memory_profiler.h  test_metrics_only.cpp
MemoryProfiler/Client/Includes/: ServerClient.h
MemoryProfiler/Client/src/: ServerClient.cpp
MemoryProfiler/Include/: AllocationInfo.h  MTDebug.h  MemoryMacros.h  MemoryProfiler.h  MemoryTracker.h  MpLibSim.h  profiler_structures.h
MemoryProfiler/src/: MemoryOperators.cpp  MemoryProfiler.cpp  MemoryTracker.cpp  MpLibSim.cpp
ReacursosDescargables/: README.md  instalar_vcpkg.bat
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MemoryProfiler.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-msvc/.cmake/api/v1/reply/: cache-v2-724b3c45db47d8fced79.json  cmakeFiles-v1-b57fd7676e61835a3883.json  codemodel-v2-bf9a3cd4b686782aa37a.json  index-2025-09-06T03-03-30-0319.json  target-ALL_BUILD-Debug-aa0e59937fe183908a95.json  target-MemoryProfilerGUI-Debug-840e288d042268af76b0.json  target-MemoryProfilerGUI-Release-33de761b0ca05eabfc6a.json  target-ZERO_CHECK-Release-3e1a19259df8a53d2b1c.json  target-memorytracker-Debug-522af8db2582343e9f11.json  target-memorytracker-Release-afc47a684fb675255531.json  target-test_tracker-Debug-15b1744ecce73cf7734a.json  target-test_tracker-Release-4c4bf0e35d6fdf51cede.json
build-msvc/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-Release.cmake
build-msvc/gui/: MemoryProfilerGUI.vcxproj  MemoryProfilerGUI.vcxproj.filters  cmake_install.cmake
build-msvc/lib/: cmake_install.cmake  memorytracker.vcxproj  memorytracker.vcxproj.filters
build-msvc/tests/: cmake_install.cmake  test_tracker.vcxproj  test_tracker.vcxproj.filters
gui/: CMakeLists.txt  LisenLogic.cpp  ListenLogic.cpp  ListenLogic.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  profiler_structures.h
lib/: AllocationInfo.cpp  AllocationInfo.h  CMakeLists.txt  MemoryTracker.cpp  MemoryTracker.h
tests/: CMakeLists.txt  basic_test.cpp  test_edge_case.cpp  test_from_fs.cpp  test_memory_load.cpp  test_tracker.cpp
